--- a/css/Photography.css
+++ b/css/Photography.css
@@ -81,3 +81,74 @@
   padding-top: 80px;
   color: white;
 }
+
+/* Photo Wall 容器 */
+.photo-wall {
+  width: 90%;
+  max-width: 1100px;
+  padding-top: 900px;
+  font-family: "Comfortaa", sans-serif;
+  display: flex;
+  justify-content: center;
+  /* 水平居中 */
+  margin-top: 120px;
+  transform: translateX(-260px);
+
+}
+
+/* 网格布局 */
+.photo-grid {
+  /* display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  gap: 22px; */
+  display: flex;
+  gap: 35px;
+  overflow-x: auto;
+  padding-bottom: 10px;
+  flex-wrap: wrap;
+
+}
+
+/* 单张照片卡片 */
+.photo-item {
+  position: relative;
+  overflow: hidden;
+  border-radius: 16px;
+
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.08);
+
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+
+  aspect-ratio: 4 / 5;
+  transition: transform 0.35s ease, box-shadow 0.35s ease;
+
+  flex: 0 0 240px;
+
+
+}
+
+/* 图片 */
+.photo-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+
+  transition: transform 0.5s ease;
+}
+
+/* Hover 效果 */
+.photo-item:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.45);
+}
+
+.photo-item:hover img {
+  transform: scale(1.08);
+}
+
+.photo-grid::-webkit-scrollbar {
+  display: none;
+}
